<resources>
    <string name="app_name">Película</string>
    <string name="TextoAlicia1">Alicia a través del espejo</string>
    <string name="TextoAlicia2">Alice Through the Looking Glass</string>
    <string name="TextoAlicia3">Clasificación</string>
    <string name="TextoAlicia4">Aventura</string>
    <string name="TextoAlicia5">180 min</string>
    <string name="TextoAlicia6">Sinopsis</string>
    <string name="TextoAlicia7">Alicia através del espejo  presenta los inolvidables personajes de la historia de Lewis Caroll
                    sgycgxjchgkjuhzkujschujsdhjkckjgkjcgdyuhgfeduys
                    xbnjsdgjhvcjhgvbdsuvbcuhbsdjchjkckjgkjcgdyuhgfeduys
                    xbnjsdgjhvcjhgvbdsuvbcuhbsdjckjdsnjkhbckhjdsvbfjhggbjhds</string>
</resources>
